# aabb_benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: External.cmake  geogram.cmake
python/: benchmark.py  paths.py  stats.py
src/: aabb.cpp  aabb.h  aabb_binary.cpp  aabb_binary.h  ambient_occlusion.cpp  ambient_occlusion.h  distances.cpp  distances.h  intersect_ray.cpp  intersect_ray.h  mesh_reorder.cpp  mesh_reorder.h  shading.cpp  shading.h  squared_distances.cpp  squared_distances.h  utils.cpp  utils.h
tests/: ambient_occlusion.cpp  distance_to_mesh.cpp  ray_tracing.cpp
